fixed/overflow adicionado no html

--- a/styles/global.css
+++ b/styles/global.css
@@ -65,6 +65,10 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+}
+
 *,
 *:before,
 *:after {
